[package]
name = "aoc-2024-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
name = "aoc"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "aoc"
path = "src/main.rs"
test = false
